# c

./: .gitignore  README.md  meson.build
lib/include/: code_generator.h  error.h  lexer.h  parser.h  stb_ds.h  str.h  utils.h
lib/src/: code_generator.c  error.c  lexer.c  parser.c  str.c
tests/: code_gen_tests.c  lexer_tests.c  parser_tests.c
